# agentcore-public-stack

./: .gitignore  CLAUDE.MD  README.md  RELEASE_NOTES.md
backend/: Dockerfile.inference-api  README.md  pyproject.toml  run-app-api.sh  run-inference-api.sh
backend/scripts/: seed_bootstrap_data.py  test_voice_client.py
backend/src/: .env.example
backend/src/agents/local_tools/: __init__.py
backend/src/agents/main_agent/: README.md  USAGE_EXAMPLES.md  __init__.py  agent_types.py  base_agent.py  chat_agent.py  main_agent.py  skill_agent.py  voice_agent.py
backend/src/agents/main_agent/config/: __init__.py  constants.py
backend/src/agents/main_agent/core/: agent_factory.py  model_config.py
backend/src/agents/main_agent/integrations/: external_mcp_client.py  gateway_mcp_client.py  oauth_token_cache.py
backend/src/agents/main_agent/quota/: repository.py
backend/src/agents/main_agent/session/: compaction_models.py  memory_config.py  preview_session_manager.py  session_factory.py  turn_based_session_manager.py
backend/src/agents/main_agent/skills/: __init__.py  decorators.py  skill_registry.py  skill_tools.py
backend/src/agents/main_agent/streaming/: stream_coordinator.py
backend/src/agents/main_agent/tools/: tool_catalog.py  tool_filter.py
backend/src/apis/app_api/: main.py
backend/src/apis/app_api/assistants/: routes.py
backend/src/apis/app_api/chat/: routes.py
backend/src/apis/app_api/connectors/: routes.py
backend/src/apis/app_api/costs/: aggregator.py
backend/src/apis/app_api/messages/: models.py
backend/src/apis/app_api/sessions/: routes.py
backend/src/apis/app_api/tools/: __init__.py  freshness.py  models.py  service.py
backend/src/apis/inference_api/: main.py
backend/src/apis/inference_api/chat/: models.py  routes.py  service.py  voice_routes.py
backend/src/apis/shared/middleware/: agentcore_context.py
backend/src/apis/shared/oauth/: __init__.py  agentcore_identity.py  agentcore_registrar.py  disconnect_repository.py  models.py  provider_repository.py
backend/src/apis/shared/sessions/: __init__.py  messages.py  metadata.py  models.py
backend/src/apis/shared/tool_approval/: models.py
backend/tests/: test_seed_system_admin_jwt.py
backend/tests/agents/main_agent/: test_agent_types.py  test_voice_agent.py  test_voice_routes.py
backend/tests/apis/app_api/: test_admin_oauth_rollback.py  test_connectors_routes.py
backend/tests/routes/: conftest.py  test_inference.py  test_tools.py
backend/tests/shared/: conftest.py  test_conftest_smoke.py  test_coverage_boost.py  test_models_and_utils.py  test_oauth_agentcore_registrar.py  test_oauth_disconnect_repository.py  test_oauth_models.py  test_oauth_repositories.py  test_sessions_messages.py  test_sessions_metadata.py
docs/: SSE_ERROR_MESSAGING.md
(+136 files in other folders)
