[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore-stack"
version = "1.0.0-beta.23"
requires-python = ">=3.10"
description = "Multi-agent conversational AI system with AWS Bedrock AgentCore"
readme = "README.md"
license = {text = "MIT"}

# Core dependencies shared across both APIs
dependencies = [
    # FastAPI and web framework
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",

    # AWS and cloud services
    "boto3==1.42.96",

    # Utilities
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "aiofiles==25.1.0",

    # Authentication (for shared auth module)
    "pyjwt[crypto]==2.12.1",

    # OAuth provider management
    "authlib==1.7.0",
    "cachetools==6.2.4",

    # Security: pin starlette to fix Dependabot alert (transitive via fastapi)
    "starlette==1.0.0",
]

[project.optional-dependencies]
# AgentCore-specific dependencies (for inference_api)
agentcore = [
    "strands-agents==1.37.0",
    "strands-agents-tools==0.5.1",

    "aws-opentelemetry-distro==0.17.0",
    "bedrock-agentcore==1.6.4",
    # Multi-provider LLM support
    "openai==2.32.0",  # For OpenAI models
    "google-genai==1.73.1",  # For Google Gemini models
]

# Voice/BidiAgent dependencies (Nova Sonic speech-to-speech)
bidi = [
    "strands-agents[bidi]==1.37.0",
]

# Document ingestion pipeline dependencies (for Lambda deployment)
# NOTE: For document ingestion dependencies, see:
#   backend/src/apis/app_api/documents/ingestion/requirements.txt
# This is the single source of truth for the Lambda deployment.
# For local development: uv pip install -r backend/src/apis/app_api/documents/ingestion/requirements.txt

# Development dependencies
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "hypothesis==6.152.3",
    "moto[dynamodb,cognitoidp]==5.1.22",
    "black==26.3.1",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "types-aiofiles==25.1.0.20251011",
    "tiktoken==0.12.0",
    "numpy==2.2.6",
]

# All dependencies (convenience)
all = [
    "agentcore-stack[agentcore,bidi,dev]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agents*", "apis*"]

[tool.black]
line-length = 150
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
# pythonpath is relative to the directory where pytest is run (backend/)
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
